# project_nekomata

./: .gitignore  CMakeLists.txt  README.md
Assets/: LICENSE-IosevkaTerm-Light.md  ibllut.ktx2  smaa_areatex.ktx2  smaa_searchtex.ktx2  ui_test.ktx2  ui_test2.ktx2  ui_test3.ktx2  ui_test4.ktx2  ui_test5.ktx2
src/: main.cpp  nekomata2.ixx
src/core/containers/: atomic_bitmap_index_allocator.ixx  double_buffer.ixx  freelist_pool.ixx  hashmap.ixx  iter.ixx  mpsc_queue.ixx  sparse_set_storage.ixx  vec.ixx
src/core/cs/: README.md  assertions.ixx  cmp_traits.ixx  cs.ixx  flatvariant.ixx  hashmap.ixx  invoke_traits.ixx  iterators.ixx  log.ixx  mem.ixx  niche.ixx  nonnull_ptr.ixx  nonzero_ptr.ixx  option.ixx  panic.ixx  primitives.ixx  result.ixx  slice.cpp  slice.ixx  thread.ixx  unique.ixx  vec.cpp  vec.ixx
src/core/ecs/: component_pool.ixx  ecs.ixx  entity.ixx  script_base.ixx
src/core/ecs/world/: camera.ixx  pointlight.ixx  renderable.ixx  transform.ixx
src/core/input/: input.cpp  input.ixx  keys.ixx  mousemodes.ixx
src/core/log/: log.ixx
src/core/math/: base_matrix.ixx  consts.ixx  math.ixx  matrix_types.ixx  quaternion.ixx  raddeg.ixx  transform3d.ixx
src/core/overloaded/: overloaded.hpp  overloaded.ixx
src/core/platform/: assert.ixx  int_def.ixx  sdl.cpp  sdl.hpp  sdl.ixx  thread.ixx
src/core/runtime/: entry.cpp  entry.ixx  graphicsthread.cpp  graphicsthread.ixx  mainthread.cpp  mainthread.hpp  mainthread.ixx  shared_data.cpp  shared_data.hpp  shared_data.ixx
src/core/storage/: sharded_hash_storage.cpp  sharded_hash_storage.hpp  sharded_hash_storage.ixx
src/core/ui/: color.ixx  element_style.ixx  layout.ixx  ui_drawcmds.hpp  ui_drawcmds.ixx  ui_node.hpp  ui_node.ixx  ui_system.cpp  ui_system.ixx
src/core/ui/components/: ui_rect.ixx  ui_text.ixx  ui_texture.ixx
src/graphics/cmd_alloc/: cmd_alloc.cpp  cmd_alloc.ixx
src/graphics/fontsystem/: dynamic_font_atlas.cpp  dynamic_font_atlas.ixx  font_face.cpp  font_face.ixx  font_manager.cpp  font_manager.ixx
src/graphics/meshsystem/: mesh_asset_storage.cpp  mesh_asset_storage.ixx
src/graphics/meshsystem/pool/: mesh_pool.cpp  mesh_pool.ixx
src/graphics/rendering/: frame_context.cpp  frame_context.ixx  frame_rendering_resources.cpp  frame_rendering_resources.ixx  shared_rendering_resources.cpp  shared_rendering_resources.hpp  shared_rendering_resources.ixx  transient_rendering_resources.cpp  transient_rendering_resources.ixx
src/graphics/shaders/: bitmap_font.slang  cpp_kw_shim.h  globallayout.ixx  globallayout.slang  globallayout_structs.h  ibl_prefiltered_spec_mip_gen.slang  material_props.ixx  material_props.slang  material_props_shared.h  tess_test.slang  ui_rect.slang
src/graphics/shaders/normalpack/: normalpack.slang
src/graphics/shaders/smaa/: smaa.hlsl  smaa_incl.h
src/graphics/srt/: bindless_descriptor_set_srt.cpp  bindless_descriptor_set_srt.ixx  shader_resource_table.ixx  srt_consts.ixx
src/graphics/texturesystem/: sampler_cache.cpp  sampler_cache.ixx  texture_manager.cpp  texture_manager.ixx  texture_to_shader_index_table.cpp  texture_to_shader_index_table.ixx
src/graphics/vulkan/: context.cpp  context.hpp  context.ixx  deletion_queue.cpp  deletion_queue.ixx  spv_shader_code.cpp  spv_shader_code.ixx  vk_buffer.cpp  vk_buffer.ixx  vk_commands.cpp  vk_commands.ixx  vk_commands_barriers.ixx  vk_descriptor_pool.cpp  vk_descriptor_pool.ixx  vk_descriptor_set.cpp  vk_descriptor_set.ixx  vk_descriptor_set_layout.cpp  vk_descriptor_set_layout.ixx  vk_gpu_obrm.cpp  vk_gpu_obrm.ixx  vk_gpu_obrm_structs.cpp  vk_gpu_obrm_structs.ixx  vk_image.cpp  vk_image.ixx  vk_image_trait.ixx  vk_image_view.cpp  vk_image_view.ixx  vk_memory_alloc.cpp  vk_memory_alloc.ixx  vk_physical_device_props.cpp  vk_physical_device_props.hpp  vk_physical_device_props.ixx  vk_pipeline_graphics.cpp  vk_pipeline_graphics.hpp  vk_pipeline_graphics.ixx  vk_pipeline_layout.cpp  vk_pipeline_layout.ixx  vk_query_pool.cpp  vk_query_pool.ixx  vk_queue.cpp  (+7 more)
src/graphics/vulkan/shadercache/: pipeline_binary_frontend.hpp  pipeline_binary_frontend.ixx  pipeline_sc_concept.ixx  shadercache.cpp  shadercache.hpp  shadercache.ixx
src/graphics/vulkan/sync_primitives/: binary_semaphore.cpp  binary_semaphore.ixx  fence.cpp  fence.ixx  timeline_semaphore.cpp  timeline_semaphore.ixx
tools/ddstoktx2/: .gitignore  Cargo.toml
tools/ddstoktx2/src/: dds_file.rs  dxgi_format_map.rs  main.rs  textureinfo.rs
